# dge

./: Cargo.toml  README.md
dge-example/: Cargo.toml
dge-example/src/: main_generate_code.rs  main_use_generated.rs
dge-example/src/behaviour/: accept_failure.rs  add_1.rs  add_2.rs  data.rs  double.rs  error.rs  merge_additions.rs  mod.rs  multiply.rs  rest_call.rs  square.rs
dge-gen/: Cargo.toml  askama.toml
dge-gen/src/: error.rs  graph.rs  lib.rs  misc.rs
dge-gen/src/generate/: aggregate.rs  fan_out.rs  graph.rs  init_exchanges_and_queues.rs  main.rs  mod.rs  poll.rs  rust.rs  user_handler.rs  wait_all.rs  wait_any.rs
dge-gen/src/template/: aggregate.rs  fan_out.rs  header.rs  header_comment.rs  header_common_import.rs  init_exchanges_and_queues.rs  main.rs  part_common_import.rs  poll.rs  user_handler.rs  wait_all.rs
dge-runtime/: Cargo.toml  README.md
dge-runtime/src/: error.rs  fan_out.rs  helper_macro.rs  lib.rs  lib_rmq.rs  lib_rmq_primitive.rs  rmq.rs  rmq_init.rs  rmq_primitive.rs  user_handler.rs  wait_all.rs
dge-runtime/src/component/: aggregate.rs  fan_out.rs  mod.rs  user_handler.rs  wait_all.rs
dge-runtime/src/component/poll/: add.rs  check.rs  data.rs  mod.rs
src/: error.rs  evaluate.rs  graph.rs  lib.rs
src/generate/: code_gen.rs  fan_out.rs  mod.rs  user_handler.rs  wait_all.rs  wait_any.rs
src/primitive/: fan_out.rs  lib_rmq.rs  mod.rs  user_handler.rs  wait_all.rs
src/runtime/: fan_out.rs  lib_rmq.rs  lib_rmq_primitive.rs  misc.rs  mod.rs  user_handler.rs  wait_all.rs
src/template/: fan_out.rs
