[package]
name = "dge"
version = "0.1.0"
authors = ["Incomplete <incomplete@aixon.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.8"
petgraph = "0.6.0"
nom = "6.2.1"
tokio = { version = "1.5", features = ["full"] }
tokio-util = "0.6.6"
tokio-postgres = { version = "0.7.2", features = ["with-uuid-0_8"] }
deadpool = "0.7.0"
deadpool-postgres = "0.7.0"
futures = "0.3.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.4.0"
serde_repr = "0.1"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4.0"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
fern = "0.6"
log = "0.4"
lapin = "1.7.1"
tokio-amqp = "1.0.0"
structopt = "0.3.21"
thiserror = "1.0.24"
sqlx = { version = "0.5.2", default-features = false, features = [ "macros", "postgres", "mysql", "uuid", "chrono", "json", "runtime-tokio-native-tls" ] }
redis = { version = "0.20", features = ["tokio-comp"] }
deadpool-redis = { version = "0.7.1", features = ["config"] }
