[package]
name = "dge-example"
version = "0.1.0"
authors = ["Incomplete <incomplete@aixon.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dge-gen = { path = "../dge-gen", version = "0.1.0" }
dge-runtime = { path = "../dge-runtime", version = "0.1.0" }
tokio = { version = "1.5", features = ["full"] }
lapin = "1.7.1"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.24"

[[bin]]
name = "generate_code"
path = "src/main_generate_code.rs"

[[bin]]
name = "wait_additions"
path = "src/generated/wait_additions.rs"

[[bin]]
name = "init_exchanges_and_queues"
path = "src/generated/init_exchanges_and_queues.rs"

[[bin]]
name = "add_2"
path = "src/generated/add_2.rs"

[[bin]]
name = "add_1"
path = "src/generated/add_1.rs"

[[bin]]
name = "duplicate_input_msg"
path = "src/generated/duplicate_input_msg.rs"
