[package]
name = "dge-gen"
version = "0.1.0"
authors = ["Incomplete <incomplete@aixon.co>"]
edition = "2018"
description = "Crate for building a computational graph to be executed distributely"
license = "MIT"
repository = "https://github.com/qwfy/dge"

[dependencies]
askama = "0.8"
petgraph = "0.6.0"
log = "0.4"
thiserror = "1.0.24"
heck = "0.3.3"