[package]
name = "dge-runtime"
version = "0.1.0"
authors = ["Incomplete <incomplete@aixon.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.5", features = ["full"] }
tokio-util = "0.6.6"
tokio-postgres = { version = "0.7.2", features = ["with-uuid-0_8"] }
futures = "0.3.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.4.0"
fern = "0.6"
log = "0.4"
lapin = "1.7.1"
tokio-amqp = "1.0.0"
thiserror = "1.0.24"